<resources>
    <string name="app_name">Crypto Invest</string>
    <string name="currency_list">Currencies</string>
    <string name="email">Email</string>
    <string name="track_name">Track: </string>
    <string name="track_value">$$</string>
    <string name="set_notification">Currency Notification Settings</string>
    <string name="confirm_notification_settings">Apply Setting</string>
    <string name="search_hint">Search Currency</string>
    <string name="minimum_password">Password too short, enter a minimum of 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="delete_account">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="invalid_email">Please enter a valid email!</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_btn">Log In</string>
    <string name="currency_name">Currency Name</string>

    <string name="btn_link_to_login">Already registered? Login Here!</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you a password reset link.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="link_to_register">Don\'t have an account yet? Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Currency Details Xml-->
    <string name="currecy_details">Currency Details</string>
    <string name="custom_notification_amount">$amount</string>


    <string name="channel_name">CryptoInvest Update</string>
    <string name="channel_description">Gives User notifications based on crypto currency they are tracking</string>
    <string name="title_of_notification">CryptoInvest Update!!!</string>
    <string name="notification_channel">Notification Channel</string>

    <!--Currency Fragment on Main page Xml-->
    <string name="currecy_logo">Currency Logo</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="todo">TODO</string>


</resources>
