<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="5dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/notif_back"
                android:layout_marginStart="5sp">

                <TextView
                    android:id="@+id/notificationFragTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:padding="5dp"
                    android:text="@string/set_notification"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/btc_list_bg"
                    android:textStyle="bold"
                    card_view:layout_constraintBottom_toTopOf="@+id/trackNameLayout"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/trackNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    card_view:layout_constraintBottom_toTopOf="@+id/textView"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/notificationFragTitle">

                    <EditText
                        android:id="@+id/currency_track_name_on_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/track_name"
                        android:singleLine="true"
                        android:textColor="@android:color/background_light"
                        android:textColorHint="@color/notification_fragment_text"
                        />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="17dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginStart="31dp"
                    android:text="@string/track_value"
                    android:textColor="@color/text_register"
                    android:textSize="14sp"
                    card_view:layout_constraintBottom_toTopOf="@+id/apply_notification_setting"
                    card_view:layout_constraintEnd_toStartOf="@+id/currency_track_value_spinner"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/trackNameLayout"/>

                <Spinner
                    android:id="@+id/currency_track_value_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    card_view:layout_constraintBottom_toTopOf="@+id/apply_notification_setting"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toEndOf="@+id/textView"
                    card_view:layout_constraintTop_toBottomOf="@+id/trackNameLayout"/>


                <Button
                    android:id="@+id/apply_notification_setting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="288dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/confirm_notification_settings"
                    android:textColor="@color/notification_setting_background"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>


</android.support.constraint.ConstraintLayout>